--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport:" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="xudvZF3DDLp1tm9JD--FmAZrkE3cD4iH0bxD2qoPCq0" />
   <meta name="description" content="Making things looks great
   for companies who make great stuff">
